# quantitative-hedging

./: .pre-commit-config.yaml  README.md  hedge.py  pyproject.toml
.github/workflows/: ci.yml
cvxopt/: __init__.py
src/hedge/: __init__.py
tests/: conftest.py  test_hedge.py
