[project]
name = "quantitative-hedging"
version = "0.1.0"
description = "Simple quantitative hedging utilities"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Unknown"}]
dependencies = [
    "cvxopt",
    "numpy",
    "pandas",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=hedge --cov-branch --cov-report=term-missing"


[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
